--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <!-- LOGO PLACEHOLDER -->
                 <div class="h-16 w-auto flex items-center justify-center bg-transparent overflow-hidden">
                      <!-- Replace src below with actual logo file -->
-                     <img src="https://placehold.co/200x80/FDFCDC/486249?text=LOGO+SAMA" alt="Sama Equilibrio Logo" class="h-full object-contain">
+                     <img src="logosama.png" alt="Sama Equilibrio Logo" class="h-full object-contain">
                 </div>
             </div>
             <div class="hidden md:flex space-x-8 text-sama-text font-medium">
@@ -121,7 +121,7 @@
             <div class="md:w-1/2 text-center md:text-left fade-in">
                 <h1 class="font-serif text-4xl md:text-5xl lg:text-6xl text-sama-dark font-bold leading-tight mb-6">
                     Ayurveda: Salud y Bienestar real,<br>
-                    <span class="text-sama-primary italic">(en tus manos)</span>
+                    <span class="text-sama-primary italic">en tus manos</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-600 mb-8 leading-relaxed">
                     Conectá la precisión de la medicina moderna con tu sabiduría interior. Dejá atrás las "soluciones mágicas" y recuperá el control de tu salud con la guia de un médico experto.
@@ -150,7 +150,7 @@
                     <!-- Main Image Container -->
                     <div class="relative z-10 organic-blob overflow-hidden shadow-2xl border-4 border-white h-[500px] w-full bg-gray-200">
                         <!-- REPLACE THIS SRC WITH DR NICASIO'S PHOTO -->
-                        <img src="https://placehold.co/600x800/749C75/ffffff?text=Foto+Dr.+Nicasio" alt="Dr. Nicasio Cavilla" class="object-cover w-full h-full">
+                        <img src="fotoperfil.jpg" alt="Dr. Nicasio Cavilla" class="object-cover w-full h-full">
                     </div>
 
                     <!-- Floating Badge (Social Proof) -->
@@ -183,7 +183,7 @@
             <div id="problemSummary" class="hidden mt-10 p-6 bg-sama-light border-l-4 border-sama-accent rounded-r-lg max-w-4xl mx-auto text-center md:text-left animate-pulse">
                 <p class="text-lg text-sama-dark font-medium">
                     <i class="fa-solid fa-circle-check text-sama-accent mr-2"></i>
-                    No estás solo/a. Esto es más común de lo que creés y <span class="font-bold">tiene solución</span> a través del Sistema Sama Sana.
+                    No estás sola/. Esto es más común de lo que creés y <span class="font-bold">tiene solución</span> a través del Sistema Sama Sana.
                 </p>
             </div>
         </div>
@@ -287,7 +287,7 @@
                     <!-- Image Area -->
                     <div class="lg:w-1/3 relative h-96 lg:h-auto">
                         <!-- REPLACE THIS SRC WITH BIO PHOTO (e.g. from PDF with orange sweater) -->
-                        <img src="https://placehold.co/600x800/486249/ffffff?text=Nicasio+Accion" alt="Dr. Nicasio Cavilla" class="absolute inset-0 w-full h-full object-cover">
+                        <img src="nicasiolabrava.jpg" alt="Dr. Nicasio Cavilla" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-gradient-to-t from-sama-dark via-transparent to-transparent opacity-80 lg:bg-gradient-to-r"></div>
                     </div>
                     
@@ -472,31 +472,31 @@
                     </div>
                     <p class="text-gray-600 italic mb-4 flex-grow">"En 20 días me había desinflamado y bajé 8 kilos. Pasé de estar triste y aislada a tener ganas de conectar."</p>
                     <div class="font-bold text-sama-dark mb-4">- Miriam V.</div>
-                    <a href="https://open.spotify.com/show/your-podcast-link" target="_blank" class="text-xs font-bold text-sama-primary hover:text-sama-dark border border-sama-primary/30 rounded-full px-4 py-2 transition inline-flex items-center justify-center gap-2 mt-auto">
+                    <a href="https://open.spotify.com/episode/0zk4aT88z0XM9V8rG7KZBf?si=cd61e9bb38464088" target="_blank" class="text-xs font-bold text-sama-primary hover:text-sama-dark border border-sama-primary/30 rounded-full px-4 py-2 transition inline-flex items-center justify-center gap-2 mt-auto">
                         <i class="fa-solid fa-microphone-lines"></i> Escuchar testimonio completo
                     </a>
                 </div>
                 <!-- Testimonial 2 -->
                 <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
-                    <img src="https://placehold.co/100x100/D98324/ffffff?text=DS" alt="Diego S." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
+                    <img src="https://placehold.co/100x100/D98324/ffffff?text=DS" alt="Liliana E." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-gray-600 italic mb-4 flex-grow">"Se me normalizó la presión, no tengo más colesterol y volví a sentirme realmente bien."</p>
-                    <div class="font-bold text-sama-dark mb-4">- Diego S.</div>
-                    <a href="https://open.spotify.com/show/your-podcast-link" target="_blank" class="text-xs font-bold text-sama-primary hover:text-sama-dark border border-sama-primary/30 rounded-full px-4 py-2 transition inline-flex items-center justify-center gap-2 mt-auto">
+                    <div class="font-bold text-sama-dark mb-4">- Liliana E.</div>
+                    <a href="https://open.spotify.com/episode/2hGGe11TTsY5SB7NAE8vEz?si=542e0ee2565149f4" target="_blank" class="text-xs font-bold text-sama-primary hover:text-sama-dark border border-sama-primary/30 rounded-full px-4 py-2 transition inline-flex items-center justify-center gap-2 mt-auto">
                         <i class="fa-solid fa-microphone-lines"></i> Escuchar testimonio completo
                     </a>
                 </div>
                 <!-- Testimonial 3 -->
                 <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
-                    <img src="https://placehold.co/100x100/486249/ffffff?text=LE" alt="Liliana E." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
+                    <img src="https://placehold.co/100x100/486249/ffffff?text=LE" alt="Diego S." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-gray-600 italic mb-4 flex-grow">"Este camino me dio contención y claridad. Honestamente, me cambió la vida."</p>
-                    <div class="font-bold text-sama-dark mb-4">- Liliana E.</div>
-                    <a href="https://open.spotify.com/show/your-podcast-link" target="_blank" class="text-xs font-bold text-sama-primary hover:text-sama-dark border border-sama-primary/30 rounded-full px-4 py-2 transition inline-flex items-center justify-center gap-2 mt-auto">
+                    <div class="font-bold text-sama-dark mb-4">- Diego S.</div>
+                    <a href="https://open.spotify.com/episode/2QaOl80aaryZyUWcFggB2Z?si=d9e1cb5060ee4341" target="_blank" class="text-xs font-bold text-sama-primary hover:text-sama-dark border border-sama-primary/30 rounded-full px-4 py-2 transition inline-flex items-center justify-center gap-2 mt-auto">
                         <i class="fa-solid fa-microphone-lines"></i> Escuchar testimonio completo
                     </a>
                 </div>
