--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <!-- LOGO PLACEHOLDER -->
                 <div class="h-16 w-auto flex items-center justify-center bg-transparent overflow-hidden">
                      <!-- Replace src below with actual logo file -->
-                     <img src="logosama.png" alt="Sama Equilibrio Logo" class="h-full object-contain">
+                     <img src="isotiposama.png" alt="Sama Equilibrio Logo" class="h-full object-contain">
                 </div>
             </div>
             <div class="hidden md:flex space-x-8 text-sama-text font-medium">
