--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-2 pl-4 md:pl-0">
                 <div class="h-16 w-auto flex items-center justify-center bg-transparent overflow-hidden">
-                     <img src="isotiposama.png" alt="Sama Equilibrio Logo" class="h-full object-contain">
+                     <img src="isotiposamat.png" alt="Sama Equilibrio Logo" class="h-full object-contain">
                 </div>
             </div>
             <div class="hidden md:flex space-x-8 text-sama-text font-medium">
