--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
             <!-- 3 Steps with Orange Accent -->
             <div class="mt-20">
-                <h2 class="font-serif text-3xl text-center text-sama-text font-bold mb-12">Los tres ingredientes del éxito</h2>
+                <h2 class="font-serif text-3xl text-center text-sama-text font-bold mb-12">Obtendrás los tres ingredientes del éxito</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
                     <div class="p-6 bg-white rounded-xl shadow-md card-hover border-t-4 border-sama-primary">
                         <div class="w-16 h-16 bg-sama-light rounded-full flex items-center justify-center text-sama-dark text-2xl mx-auto mb-4">
@@ -328,14 +328,14 @@
                                 <i class="fa-solid fa-users-viewfinder text-sama-dark mt-1 mr-3 text-xl"></i>
                                 <div>
                                     <h4 class="font-bold text-sama-text">Líder Educativo</h4>
-                                    <p class="text-xs text-gray-600">Fundador Academia Sama Marga.</p>
+                                    <p class="text-xs text-gray-600">Docente Universitario y Fundador Academia Sama Marga.</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
                                 <i class="fa-solid fa-hand-holding-heart text-sama-dark mt-1 mr-3 text-xl"></i>
                                 <div>
                                     <h4 class="font-bold text-sama-text">Sanación Activa</h4>
-                                    <p class="text-xs text-gray-600">"Toma las riendas de tu salud."</p>
+                                    <p class="text-xs text-gray-600">Tomá las riendas de tu salud.</p>
                                 </div>
                             </div>
                         </div>
@@ -370,12 +370,13 @@
                 <div class="offer-card start bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-blue-400">
                     <div class="p-6 flex-grow">
                         <span class="bg-blue-100 text-blue-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Primeros Pasos</span>
-                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Curso Iniciación</h3>
-                        <p class="text-gray-600 text-sm mb-6">Los fundamentos del Sistema Sama Sana para aplicar hoy mismo.</p>
+                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Cursos de Iniciación</h3>
+                        <p class="text-gray-600 text-sm mb-6">Los fundamentos de las 4 Inteligencias del Sistema Sama Sana para aplicar hoy mismo.</p>
                         <ul class="space-y-3 mb-6">
-                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Entendé tu cuerpo</li>
-                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Rutinas básicas</li>
-                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Victoria rápida</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Alimentación saludable</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Rutina de vida equilibrada</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Emociones y Relaciones</li>
+                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Encontrando tu Misión y Propósito</li>
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
@@ -390,7 +391,7 @@
                     <div class="p-6 flex-grow">
                         <span class="bg-green-100 text-green-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Membresía</span>
                         <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Comunidad Sama Sana</h3>
-                        <p class="text-gray-600 text-sm mb-6">Tu tribu de salud. Acompañamiento continuo y Q&A grupal.</p>
+                        <p class="text-gray-600 text-sm mb-6">Tu Comunidad de salud. Acompañamiento continuo y Q&A grupal.</p>
                         <ul class="space-y-3 mb-6">
                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Sesiones en vivo</li>
                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Biblioteca de contenido</li>
@@ -399,7 +400,7 @@
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
                         <p class="text-3xl font-bold text-sama-text mb-4">$47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
-                        <button class="w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition">Unirme a la Tribu</button>
+                        <button class="w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition">Unirme a la Comunidad</button>
                     </div>
                 </div>
 
@@ -416,9 +417,10 @@
                         </div>
 
                         <div id="content-team">
-                            <p class="text-xs text-gray-500 mb-2">Atención por médicos formados en Academia Sama Marga.</p>
+                            <p class="text-xs text-gray-500 mb-2">Atención junto a terapéutas formados en Academia Sama Marga.</p>
                             <ul class="space-y-2 mb-4">
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Método Sama Exacto</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Diagnóstico por el Dr.</li>
+                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Seguimiento por los Colaboradores.</li>
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Disponibilidad Rápida</li>
                             </ul>
                             <div class="mt-auto">
@@ -447,8 +449,8 @@
                     <div class="relative z-10 flex flex-col md:flex-row items-center justify-between">
                         <div class="md:w-2/3">
                             <span class="bg-yellow-400 text-black text-xs font-bold px-3 py-1 rounded-full uppercase mb-2 inline-block">Experiencia Premium</span>
-                            <h3 class="font-serif text-3xl font-bold mb-2">Programa Hotel Wellness Sama</h3>
-                            <p class="text-gray-100 mb-4">4 noches de inmersión total. Desintoxicación, alimentación y aprendizaje intensivo.</p>
+                            <h3 class="font-serif text-3xl font-bold mb-2">Programa Wellness Sama Sana</h3>
+                            <p class="text-gray-100 mb-4">4 noches de inmersión total en Hotel Chacras de Sierras. Desintoxicación, alimentación y aprendizaje intensivo.</p>
                         </div>
                         <div class="md:w-1/3 text-right">
                             <button class="bg-white text-sama-dark hover:bg-gray-100 font-bold px-8 py-3 rounded-full shadow-lg transition transform hover:scale-105">
@@ -573,7 +575,7 @@
     <script>
         const problems = [
             { icon: "fa-heart-pulse", text: "Estudios normales, pero te sentís mal" },
-            { icon: "fa-brain", text: "Abrumada/o con tanta información" },
+            { icon: "fa-brain", text: "Abrumada/o con tanta información sobre salud" },
             { icon: "fa-user-nurse", text: "Medicina convencional insuficiente" },
             { icon: "fa-face-tired", text: "Emociones obstaculizan tu día" },
             { icon: "fa-spa", text: "Necesidad de conexión espiritual" },
