--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
         
         body {
-            background-color: #FDFCDC !important;
+            background-color: #fff6ea !important;
             color: #2C3E2D !important;
         }
 
@@ -91,9 +91,9 @@
         }
 
         /* Ajuste fino para la foto del Dr. */
-        /* object-position: x y; -> 50% (centro horizontal) 20% (parte superior vertical) */
+        /* object-position: x y; -> 60% (centro horizontal) 30% (parte superior vertical) */
         .dr-photo {
-            object-position: 50% 20%; 
+            object-position: 60% 30%; 
         }
     </style>
 </head>
@@ -343,7 +343,7 @@
                             <div class="flex items-start">
                                 <i class="fa-solid fa-graduation-cap text-sama-dark mt-1 mr-3 text-xl"></i>
                                 <div>
-                                    <h4 class="font-bold !text-sama-text">Formación Rigurosa</h4>
+                                    <h4 class="font-bold !text-sama-text">Formación Académica Rigurosa</h4>
                                     <p class="text-xs !text-gray-600">Medicina General, Nutrición y Ayurveda.</p>
                                 </div>
                             </div>
@@ -351,7 +351,7 @@
                                 <i class="fa-solid fa-earth-asia text-sama-dark mt-1 mr-3 text-xl"></i>
                                 <div>
                                     <h4 class="font-bold text-sama-text">Sabiduría Ancestral</h4>
-                                    <p class="text-xs text-gray-600">Aprendizaje directo con Vaidyas en India.</p>
+                                    <p class="text-xs text-gray-600">Aprendizaje directo con Vaidyas en India. 21 años de práctica ininterrumpida en un linaje espiritual</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -401,12 +401,17 @@
                 <div class="offer-card start bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-blue-400">
                     <div class="p-6 flex-grow">
                         <span class="bg-blue-100 text-blue-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Primeros Pasos</span>
-                        <h3 class="font-serif text-2xl font-bold !text-sama-text mt-4 mb-2">Cursos de Iniciación</h3>
-                        <p class="!text-gray-600 text-sm mb-6">Los fundamentos de las 4 Inteligencias del Sistema Sama Sana para aplicar hoy mismo.</p>
-                        <!-- List items... -->
+                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Cursos de Iniciación</h3>
+                        <p class="text-gray-600 text-sm mb-6">Los fundamentos de las 4 Inteligencias del Sistema Sama Sana para aplicar hoy mismo.</p>
+                        <ul class="space-y-3 mb-6">
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Alimentación saludable</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Rutina de vida equilibrada</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Emociones y Relaciones</li>
+                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Encontrando tu Misión y Propósito</li>
+                        </ul>
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
-                        <p class="text-3xl font-bold !text-sama-text mb-4">$27 <span class="text-sm font-normal text-gray-500">USD</span></p>
+                        <p class="text-3xl font-bold text-sama-text mb-4">$27 <span class="text-sm font-normal text-gray-500">USD</span></p>
                         <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition">Empezar Ahora</button>
                     </div>
                 </div>
@@ -416,12 +421,16 @@
                     <div class="absolute top-0 right-0 bg-sama-accent text-sama-dark text-xs font-bold px-3 py-1 rounded-bl-lg">RECOMENDADO</div>
                     <div class="p-6 flex-grow">
                         <span class="bg-green-100 text-green-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Membresía</span>
-                        <h3 class="font-serif text-2xl font-bold !text-sama-text mt-4 mb-2">Comunidad Sama Sana</h3>
-                        <p class="!text-gray-600 text-sm mb-6">Tu Comunidad de salud. Acompañamiento continuo y Q&A grupal.</p>
-                        <!-- List items... -->
+                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Comunidad Sama Sana</h3>
+                        <p class="text-gray-600 text-sm mb-6">Tu Comunidad de salud. Acompañamiento continuo y Q&A grupal.</p>
+                        <ul class="space-y-3 mb-6">
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Sesiones en vivo</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Biblioteca de contenido</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Grupo de apoyo</li>
+                        </ul>
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
-                        <p class="text-3xl font-bold !text-sama-text mb-4">$47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
+                        <p class="text-3xl font-bold text-sama-text mb-4">$47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
                         <button class="w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition">Unirme a la Comunidad</button>
                     </div>
                 </div>
