--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 extend: {
                     colors: {
                         sama: {
-                            base: '#FDFCDC',    
+                            base: '#fff6ea',    
                             primary: '#A3C558', 
                             dark: '#6B8E23',    
                             accent: '#FFE4B5',  // Naranja melocotón suave
@@ -91,9 +91,9 @@
         }
 
         /* Ajuste fino para la foto del Dr. */
-        /* object-position: x y; -> 60% (centro horizontal) 30% (parte superior vertical) */
+        /* object-position: x y; -> 40% (centro horizontal) 10% (parte superior vertical) */
         .dr-photo {
-            object-position: 60% 30%; 
+            object-position: 40% 10%; 
         }
     </style>
 </head>
