--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
         
         body {
-            background-color: #fff6ea !important;
+            background-color: #FDFCDC !important;
             color: #2C3E2D !important;
         }
 
@@ -91,9 +91,9 @@
         }
 
         /* Ajuste fino para la foto del Dr. */
-        /* object-position: x y; -> 40% (centro horizontal) 10% (parte superior vertical) */
+        /* object-position: x y; -> 35% (centro horizontal) 5% (parte superior vertical) */
         .dr-photo {
-            object-position: 40% 10%; 
+            object-position: 35% 5%; 
         }
     </style>
 </head>
