--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 extend: {
                     colors: {
                         sama: {
-                            base: '#FDFCDC',    
+                            base: '#fff6ea',    
                             primary: '#A3C558', 
                             dark: '#6B8E23',    
                             accent: '#FFE4B5',  // Naranja melocotón suave
@@ -51,7 +51,7 @@
         }
         
         body {
-            background-color: #FDFCDC !important;
+            background-color: #fff6ea !important;
             color: #2C3E2D !important;
         }
 
