--- a/index.html
+++ b/index.html
@@ -134,23 +134,21 @@
 
                 <!-- Botón Hamburguesa -->
                 <div class="md:hidden flex items-center">
-                    <!-- Añadido id="menu-btn" y z-index alto -->
-                    <button id="menu-btn" onclick="toggleMobileMenu()" class="text-sama-dark focus:outline-none p-2 border border-transparent rounded-md hover:bg-sama-light z-50 relative">
+                    <button id="menu-btn" onclick="toggleMobileMenu()" class="text-sama-dark focus:outline-none p-2 border border-transparent rounded-md hover:bg-sama-light">
                         <i class="fa-solid fa-bars text-2xl"></i>
                     </button>
                 </div>
-            </div>
+            </div
 
-            <!-- Menú Móvil Desplegable (INLINE REAL) -->
-            <!-- Inicialmente oculto con 'hidden' de Tailwind y nuestras clases 'closed' -->
-            <div id="mobile-menu" class="hidden md:hidden border-t border-gray-100 bg-white w-full closed relative z-40">
-                <div class="flex flex-col px-4 py-4 space-y-3 text-center">
-                    <a href="#problema" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-2 border-b border-gray-50">Soluciones</a>
-                    <a href="#metodo" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-2 border-b border-gray-50">El Método</a>
-                    <a href="#bio" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-2 border-b border-gray-50">Dr. Nicasio</a>
-                    <a href="#ofertas" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-2">Programas</a>
+            <!-- Menú Móvil Desplegable (SOLUCIÓN: Absolute, fondo blanco sólido, sin opacidad) -->
+            <div id="mobile-menu" class="hidden md:hidden absolute top-full left-0 w-full bg-white border-b border-gray-200 shadow-xl z-40">
+                <div class="flex flex-col px-6 py-6 space-y-4 text-center">
+                    <a href="#problema" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-3 border-b border-gray-100 text-lg">Soluciones</a>
+                    <a href="#metodo" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-3 border-b border-gray-100 text-lg">El Método</a>
+                    <a href="#bio" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-3 border-b border-gray-100 text-lg">Dr. Nicasio</a>
+                    <a href="#ofertas" onclick="toggleMobileMenu()" class="text-sama-text font-medium hover:text-sama-dark block py-3 text-lg">Programas</a>
                     
-                    <a href="https://tu-url-del-test.com" target="_blank" onclick="toggleMobileMenu()" class="block bg-sama-accent text-sama-text px-6 py-3 rounded-full font-bold w-full shadow-sm border border-orange-200/50 mt-2">
+                    <a href="https://tu-url-del-test.com" target="_blank" onclick="toggleMobileMenu()" class="block bg-sama-accent text-sama-text px-6 py-4 rounded-full font-bold w-full shadow-md border border-orange-200/50 mt-4 text-lg">
                         ¿Cuál es mi dosha?
                     </a>
                 </div>
