--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="space-y-4">
                         <div class="bg-white p-4 rounded-lg shadow-sm cursor-pointer hover:bg-gray-50 transition border-l-4 border-sama-accent">
                             <h4 class="font-bold !text-sama-text flex items-center">
-                                <i class="fa-solid fa-apple-whole w-8 text-sama-dark"></i> Inteligencia Nutricional
+                                <i class="fa-solid fa-apple-whole w-8 text-yellow-600"></i> Inteligencia Nutricional
                             </h4>
                             <p class="text-sm !text-gray-600 mt-1 ml-8">Alimentación consciente adecuada a tu biotipo.</p>
                         </div>
@@ -272,7 +272,7 @@
                         </div>
                         <div class="bg-white p-4 rounded-lg shadow-sm cursor-pointer hover:bg-gray-50 transition border-l-4 border-sama-primary">
                             <h4 class="font-bold !text-sama-text flex items-center">
-                                <i class="fa-solid fa-vaisnava tilak w-8 text-sama-dark"></i> Inteligencia Espiritual
+                                <i class="fa-solid fa-om w-8 text-sama-dark"></i> Inteligencia Espiritual
                             </h4>
                             <p class="text-sm !text-gray-600 mt-1 ml-8">Conexión con el propósito y la paz interior.</p>
                         </div>
