--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                 <div class="offer-card deep bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-purple-500 md:col-span-2 lg:col-span-1">
                     <div class="p-6 flex-grow">
                         <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Atención Personalizada</span>
-                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Sesión Médica 1 a 1</h3>
+                        <h3 class="font-serif text-2xl font-bold text-sama-text mt-4 mb-2">Sesión Médica Individual</h3>
                         <p class="text-gray-600 text-sm mb-6">Diagnóstico profundo y plan de tratamiento específico.</p>
                         
                         <div class="bg-gray-100 p-1 rounded-lg flex mb-4">
