--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 </div>
                 <!-- Diego -->
                 <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
-                    <img src="https://placehold.co/100x100/6B8E23/ffffff?text=LE" alt="Diego S." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
+                    <img src="https://placehold.co/100x100/6B8E23/ffffff?text=DS" alt="Diego S." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
@@ -416,7 +416,7 @@
                 </div>
                 <!-- Liliana -->
                 <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
-                    <img src="https://placehold.co/100x100/fdd17c/ffffff?text=DS" alt="Liliana E." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
+                    <img src="https://placehold.co/100x100/fdd17c/ffffff?text=LE" alt="Liliana E." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
@@ -463,8 +463,7 @@
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
                         <p class="text-3xl font-bold text-sama-text mb-4">$27 <span class="text-sm font-normal text-gray-500">USD c/u</span></p>
-                        <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition">Empezar Ahora</button>
-                    </div>
+                       <a href="https://samaequilibrio.tiendup.com/" target="_blank" class="block w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition text-center">Empezar Ahora</a>
                 </div>
 
                 <!-- Offer 2 -->
@@ -482,7 +481,7 @@
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
                         <p class="text-3xl font-bold text-sama-text mb-4">$47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
-                        <button class="w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition">Unirme a la Comunidad</button>
+                        <a href="https://ayurvedasama.com/" target="_blank" class="block w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition text-center">Unirme a la Comunidad</a>
                     </div>
                 </div>
 
@@ -507,7 +506,7 @@
                             </ul>
                             <div class="mt-auto">
                                 <p class="text-2xl font-bold text-sama-text mb-2">$50 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                                <button class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition">Agendar Equipo</button>
+                                <a href="https://v2.soloturnos.com/empresa/nicasiocavilla " target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
                             </div>
                         </div>
 
@@ -519,7 +518,7 @@
                             </ul>
                             <div class="mt-auto">
                                 <p class="text-2xl font-bold text-sama-text mb-2">$200 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                                <button class="w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition">Aplicar Lista Espera</button>
+                                <a href="<a href="https://v2.soloturnos.com/empresa/nicasiocavilla " target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>
                             </div>
                         </div>
                     </div>
@@ -535,9 +534,9 @@
                         <p class="text-gray-100 mb-4">4 noches de inmersión total en Hotel Chacras de Sierras. Desintoxicación, alimentación y aprendizaje intensivo.</p>
                     </div>
                     <div class="relative z-10 w-full md:w-1/3 text-center md:text-right">
-                        <button class="bg-white text-sama-dark hover:bg-gray-100 font-bold px-8 py-3 rounded-full shadow-lg transition transform hover:scale-105 w-full md:w-auto">
-                            Ver Detalles del Retiro
-                        </button>
+                        <a href="https://tusitio.com/retiro-wellness" target="_blank" class="bg-white text-sama-dark hover:bg-gray-100 font-bold px-8 py-3 rounded-full shadow-lg transition transform hover:scale-105 w-full md:w-auto inline-block text-center">
+                            Ver Detalles
+                        </a>
                     </div>
                  </div>
 
